# UltraLights

./: .gitignore  README.md  docker-compose.yml  flashNewNode.sh
LightsTest/: CMakeLists.txt  sdkconfig
LightsTest/main/: CMakeLists.txt  idf_component.yml  (+1 more)
NewServer/: app.py  mqtt.py  runServer.sh
Scripts/: rainbow.sh  solid.sh  white.sh
Server/: .env  README.md  deleteAdmin.py  flash_agent.py  installServer.sh  requirements.txt  runServer.sh  test_integ.db
UltraNodeV5/: requirements-dev.txt  sdkconfig  sdkconfig.defaults  sdkconfig.kitchen  sdkconfig.old  updateAllNodes.sh
UltraNodeV5/components/ul_ws_engine/: CMakeLists.txt  ul_ws_engine.c
UltraNodeV5/components/ul_ws_engine/effects_ws/: black_ice.c  breathe.c  color_swell.c  effect.h  fire.c  flash.c  gradient_scroll.c  modern_rainbow.c  rainbow.c  registry.c  solid.c  spacewaves.c  theater_chase.c  triple_wave.c  twinkle.c  wipe.c
UltraNodeV5/components/ul_ws_engine/include/: ul_ws_engine.h
UltraNodeV5C3/: sdkconfig  sdkconfig.defaults
UltraNodeV5c3/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
UltraNodeV5c3/components/ul_white_engine/: CMakeLists.txt  ul_white_engine.c
UltraNodeV5c3/components/ul_white_engine/effects_white/: breathe.c  day_night_curve.c  graceful_off.c  graceful_on.c  motion_swell.c  registry.c
UltraNodeV5c3/components/ul_white_engine/include/: ul_white_engine.h
firmware/: manifest.json
nginx/: README.md  deploy_cert_to_firmware.sh  setup_nginx_certbot.sh
sdkconfigs/: c3sdkconfig  esp32sdkconfig
webapp/: main.py  models.py  mqtt.py  requirements.txt
(+305 files in other folders)
